assignment 3, create a deck of card, shuffle the deck and disply

--- a/CardGame/Makefile
+++ b/CardGame/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 STD = -std=c99
-FILES = Card.c Deck.c MainHand.c
+FILES = Card.c  Deck.c Game.c MainHand.c
 OUT_EXE = MainHand
 
 build: $(FILES)
