finish coding, review documentation

--- a/DateValidation/Makefile
+++ b/DateValidation/Makefile
@@ -2,21 +2,21 @@ CC = gcc
 STD = -std=c99
 FILES = validateMain.c 
 FILES += validateDates.c
-OUT_EXE = validateMain
+VALID_EXE = validDateMain
 
-FILES_D = displayMain.c
-FILES_D += validateDates.c
-OUT_EXE_DISPLAY= displayMain
-EXE = validateMain
+FILES_D = displayMain.c 
+FILES_D += display.c
+DISPLY_EXE= displayMain
+
 #EXE += displayMain
 build: $(FILES)
-	$(CC) $(STD) -o $(OUT_EXE) $(FILES) 
-	$(CC) $(STD) -o $(OUT_EXE_DISPLAY) $(FILES_D)
+	$(CC) $(STD) -o $(VALID_EXE) $(FILES) 
+	$(CC) $(STD) -o $(DISPLY_EXE) $(FILES_D)
 clean:
 	rm -rf *.o core 
-	rm  $(EXE)
+	rm  $(VALID_EXE) $(DISPLY_EXE) 
 
 rebuild: clean build
 
 cleanAll:
-	rm -rf *.o core $(OUT_EXE)
+	rm -rf *.o core $(VALID_EXE) $(DISPLY_EXE) 
